--- a/denunciasasamblea.libraries.yml
+++ b/denunciasasamblea.libraries.yml
@@ -9,8 +9,14 @@ den-bootstrap:
   css:
     theme:
       https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css : { type : external }
+  js:
+    https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js : { type : external }
+  dependencies:
+    - core/jquery
 den-personalizacion:
   version: 0.x
   css:
     theme:
       css/style.css : {}
+  js:
+    js/script.js : {}
